[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.107.0",
    "fastmcp>=3.4.2",
    "google-generativeai>=0.8.6",
    "groq>=1.4.0",
    "playwright>=1.60.0",
    "pytest>=9.0.3",
    "pytest-playwright>=0.8.0",
    "python-dotenv>=1.2.2",
]
